--- a/config/lotus58.conf
+++ b/config/lotus58.conf
@@ -5,5 +5,13 @@
 # CONFIG_ZMK_DISPLAY=y
 
 # Uncomment these two lines to add support for encoders
-# CONFIG_EC11=y
-# CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+# OLED display
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN=y
+CONFIG_SSD1306=y
+CONFIG_I2C=y
+CONFIG_I2C_1=y
+CONFIG_ZMK_DISPLAY_TEXT=y
