--- a/config/west.yml
+++ b/config/west.yml
@@ -4,6 +4,8 @@ manifest:
       url-base: https://github.com/zmkfirmware
     # Additional modules containing boards/shields/custom code can be listed here as well
     # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
+      url: https://github.com/urob/zmk.git
+      revision: feature/oled_display
   projects:
     - name: zmk
       remote: zmkfirmware
