--- a/config/lotus58.conf
+++ b/config/lotus58.conf
@@ -7,3 +7,45 @@
 # Uncomment these two lines to add support for encoders
 # CONFIG_EC11=y
 # CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+
+# OLED display
+CONFIG_ZMK_DISPLAY=y
+# CONFIG_ZMK_DISPLAY_STATUS_SCREEN=y
+CONFIG_SSD1306=y
+CONFIG_I2C=y
+# CONFIG_I2C_1=y
+# CONFIG_ZMK_DISPLAY_TEXT=y
+
+# Rotary Encoder
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+# Enable Per-Key RGB Support (RGB underglow)
+# leds are SK6812
+CONFIG_ZMK_RGB_UNDERGLOW=y
+# Use the STRIP config specific to the LEDs you're using
+CONFIG_WS2812_STRIP=y
+# 0	Solid color, 1	Breathe, 2	Spectrum, 3	Swirl
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=1
+# CONFIG_LED_STRIP=y
+# CONFIG_PWM=y
+
+# Set SK6812-specific settings
+# CONFIG_ZMK_RGB_UNDERGLOW_CHIP="SK6812"
+# Enable White Channel (RGBW)
+# CONFIG_ZMK_RGB_UNDERGLOW_RGBW=y
+# Adjust based on number of LEDs
+# CONFIG_ZMK_RGB_UNDERGLOW_COUNT=50
+
+# Reduce brightness steps
+# CONFIG_ZMK_RGB_UNDERGLOW_BRIGHTNESS_STEP=10
+# Auto-disable RGB when idle
+# CONFIG_ZMK_RGB_UNDERGLOW_SLEEP=y
+
+# Power Optimization for Wireless
+# CONFIG_PM=y
+# CONFIG_PM_DEVICE=y
+# CONFIG_BT_PERIPHERAL=y
+# CONFIG_BT_CENTRAL=y
+# CONFIG_ZMK_SPLIT_BLE=y
